--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,9 @@ body {
 .blanco{
     color: white
 }
+.blancob{
+    background-color: white;
+}
 .flex{
     display: flex;
 }
@@ -29,8 +32,13 @@ body {
 .pad0{
     padding: 0;
 }
+.abajo{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
 header {
-    background-color: #555;
+    background-color:red;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
@@ -58,7 +66,7 @@ main {
 }
 
 .actividades, .ranking, .datos-interesantes {
-    background-color: #888;
+    background-color: #120;
     padding: 20px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -74,12 +82,30 @@ main {
     flex: 1;
     min-width: 300px;
 }
-
+.centrar{
+    text-align: center;
+}
+.marl1em{
+    margin-left: 1.8em;
+}
+.marl2em{
+    margin-left: 2em;
+}
+.mart2em{
+    margin-top:2em
+}
+.mart4em{
+    margin-top:4em
+}
+.marb10em{
+    margin-bottom: 10em;
+}
 footer {
-    background-color: #555;
+    background-color: red;
     text-align: center;
     padding: 10px;
 }
+
 
 
 @media (max-width: 768px) {
